009-10-27  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #12364: Icon for content element 'Media'

2009-10-27  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #12356: Remove exclude=1 from lastlogin field of be_user TCA

2009-10-27  Francois Suter  <francois@typo3.org>

	* Fixed bug #12251: Scheduler: Don't show rights check on Windows

2009-10-27  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #12252: htmlArea RTE: errors are raised when extension rtehtmlarea_definitionlist is installed with TYPO3 4.3

2009-10-27  Steffen Kamper  <info@sk-typo3.de>

	* Updated wpplayer to version 2.0beta6
	* Fixed bug #12336: Little Flaws with MediaCE
	* Follow-up to #12358: FE-user last-login field uses "date" instead of "datetime" (thanks to Christian Kuhn)
	* Fixed bug #12358: BE-user last-login field uses "date" instead of "datetime" (thanks to Steffen Gebert)
	* Fixed bug #12354: Remove t3lib_sqlengine from Core and move it to DBAL (thanks to Xavier Perseguers)
	* Cleanup: #12351: Clean-up SQL parser (thanks to Xavier Perseguers)

2009-10-27  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #12327: IRRE - DOM object identifiers use invalid characters

2009-10-26  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #11980: TCEforms suggest defaultreceiver returns array or boolean (thanks to Steffen Gebert)

2009-10-25  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug RFC #12326: EXT:setup CSH mode setting gets lost (thanks to Steffen Gebert)

2009-10-24  Ernesto Baschny <ernst@cron-it.de>

	* Fixed bug #12321: Follow-up to #11586, fixes FE editing

2009-10-22  Oliver Hader  <oliver@typo3.org>

	* Release of TYPO3 4.3.0beta2

2009-10-22  Ernesto Baschny <ernst@cron-it.de>

	* Fixed bug #11586: Potential SQL injection in frontend editing (thanks to Oliver Klee)
	* Fixed bug #12309: It was possible to gain access to the Install Tool by only knowing the md5 hash of the password.